[package]
name = "twitch-emotes"
version = "0.1.0"
authors = ["Just Me <just806me@gmail.com>"]

[dependencies]
log = "0.4.3"
env_logger = "0.5.11"
dotenv = "0.13.0"
serde = "1.0.70"
serde_json = "1.0.24"
serde_derive = "1.0.70"
clap = { version = "2.32.0", features = ["yaml"] }
diesel = { version = "1.3.2", features = ["postgres"] }
reqwest = "0.8.6"
crossbeam-utils = "0.5.0"
error-chain = "0.12.0"
