[package]
name = "twitch-emotes"
version = "0.1.0"
authors = ["Just Me <just806me@gmail.com>"]

[dependencies]
log = "0.4.6"
env_logger = "0.5.13"
dotenv = "0.13.0"
serde = "1.0.80"
serde_json = "1.0.32"
serde_derive = "1.0.80"
clap = { version = "2.32.0", features = ["yaml"] }
diesel = { version = "1.3.3", features = ["postgres"] }
reqwest = "0.9.4"
crossbeam-utils = "0.5.0"
error-chain = "0.12.0"
hyper = "0.12.13"
lazy_static = "1.1.0"
